FIXED: padding del login form permitia scroll en la version mobile

--- a/badajoz_unida/badajoz_unida_front/src/app/modules/form-login/form-login/form-login.component.css
+++ b/badajoz_unida/badajoz_unida_front/src/app/modules/form-login/form-login/form-login.component.css
@@ -57,6 +57,10 @@ form input:focus{
   border-bottom: 2px solid var(--text-base-color);
 }
 
+.w-65{
+  width: 65% !important;
+}
+
 form > small{
   width: 80%;
   font-family: 'Open Sans', sans-serif;
